# DailyByte

./: README.md  pyproject.toml
src/: database.py  main.py  scheduler.py  scraper.py  summariser.py  whatsapp.py
