[project]
name = "medium-whatsapp-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "twilio>=9.10.3",
]
